deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/description: "Mutating webhook server"
    openshift.io/display-name: ""
  name: sgc-mutating-webhook
