deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    role: mutating-webhook
  name: mutating-webhook
spec:
  ports:
    - port: 443
      name: https
      protocol: TCP
      targetPort: 8080
    - port: 80
      name: http
      protocol: TCP
      targetPort: 8080
  selector:
    app: mutating-webhook
