deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mutating-webhook
spec:
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  to:
    kind: Service
    name: mutating-webhook
