deploy/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook
  labels:
    app: mutating-webhook
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
webhooks:
  - name: mutationservices.admission.online.openshift.io
    sideEffects: None
    admissionReviewVersions: [ "v1" ]
    clientConfig:
      service:
        namespace: sgc-mutating-webhook
        name: mutating-webhook
        path: /webhook/mutate
    rules:
      - apiGroups:
          - "*"
        apiVersions:
          - "*"
        operations:
          - CREATE
          - UPDATE
        resources:
          - deployments
    namespaceSelector:
      matchLabels:
        webhook.toleration-mutate: enabled
